fixed main layout issue (overlapping columns) for IE7

--- a/src/globals/css/layouts.ie.styl
+++ b/src/globals/css/layouts.ie.styl
@@ -1,7 +1,8 @@
 // the 'main' layout
 .l-main {
   .l-primary {
-    width:68%;
+    float:left;
+    width:65%;
     margin-right: 0;
     &:first-child {
       margin-left: 0;
@@ -9,6 +10,7 @@
     }
   }
   .l-secondary {
+    float:right;
     width:30%;
     margin-right: 0;
     &:first-child {
